# minirecords

./: minirecords.py  pyproject.toml
tests/: conftest.py  test_69.py  test_records.py  test_transactions.py
